tests/traci/get_variable/StoppingPlaces/ChargingStations/errors/UnsupportedVariable/testclient.prog
simstep2 48
getvariable 0x25 0xff dummy
simstep2 50

